--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ section{
   width: 48%;
   margin: 50px 0;
 }
+h1{
+  font-size: 2rem;
+  margin: 0;
+}
 .questions-container{
   width: 80%;
   padding: 15px 0;
@@ -114,12 +118,16 @@ h2{
   }
 main{
   width: 80%;
-  height: 70vh;
-  margin: 50px auto;
+  height: auto;
+  margin: 150px auto 30px;
   flex-direction: column;
-  position: relative;
+  justify-content: flex-start;
 }
 .illustration{
+  width: 100%;
+  height: 150px;
+}
+.box-illustration, .main-illustration{
   display: none;
 }
 .illustration-mobile{
@@ -127,20 +135,20 @@ main{
   justify-content: center;
   width: 80%;
   position: relative;
-  top: -190px;
-  right: 50px;
+  top: -180px;
+  margin: 0 auto;
 }
 .desktop{
   width: 70%;
 }
 section{
   width: 80%;
-  margin: 0 auto 100px auto;
-  position: relative;
-  top: -100px;
+  height: auto;
+  margin: 0 auto 50px;
 }
 h1{
   text-align: center;
+  font-size: 1.8rem;
 }
 h2{
   font-size: 1.5rem;
@@ -148,6 +156,10 @@ h2{
 .questions-container{
   width: 90%;
   margin: 1px auto;
+  padding: 0;
+}
+.answer{
+ margin-bottom: 0;
 }
 p{
   font-size: 1.3rem;
@@ -157,35 +169,18 @@ p{
 /* screen 500px */
 @media (max-width:500px) {
   main{
-    width: 90%;
-    height: auto;
-    margin: 120px auto 20px auto;
+    margin: 100px auto;
   }
-
-.illustration-mobile{
-  display: flex;
-  justify-content: center;
-  width: 70%;
-  top: -90px;
-  left: -10px;
-}
-.desktop{width: 90%;}
-section{
-  margin: 0 auto 50px;
-  width: 95%;
-  top: 0;
-}
- h1{
-   text-align: center;
- }
- h2{
-   font-size: 0.9rem;
- }
- p{
-   font-size: 0.7rem;
- }
- .questions-container{
-   width: 90%;
-   margin: 1px auto;
-}
+  h2{
+    font-size: 0.7rem;
+  }
+  p{
+    font-size: 0.6rem;
+  }
+  .illustration{
+    height: 70px;
+  }
+  .illustration-mobile{
+    top: -70px;
+  }
 }
